--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "**/*.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/(.+)",
       "dest": "/$1"
     }
   ]
